--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "material-ui": "^0.20.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "@bit/ahkyhabib.contact.ui.header": "file:./components/ui/header",
+    "@bit/ahkyhabib.contact.ui.contact": "file:./components/components/ui/contact",
+    "@bit/ahkyhabib.contact.src.context": "file:./components/src/context",
+    "@bit/ahkyhabib.contact.ui.contacts": "file:./components/ui/contacts"
   },
   "scripts": {
     "start": "react-scripts start",
